# rust-scim

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
scim-client/: Cargo.toml
scim-client/src/: client.rs  error.rs  lib.rs
scim-client/tests/: lib.rs
scim-client/tests/directory_scimple/: group.rs  groups.rs  mod.rs  resource_type.rs  schema.rs  service_provider_config.rs  users.rs  users_endpoint.rs
scim-protocol/: Cargo.toml
scim-protocol/src/: flatmap_serializer.rs  lib.rs  serde_macros.rs
scim-protocol/src/endpoint/: generate.rs  groups.rs  mod.rs  users.rs
scim-protocol/src/protocol/: endpoint.rs  extensions.rs  list_response.rs  meta.rs  mod.rs  request.rs  response.rs
scim-protocol/src/protocol/extensions/: generate.rs  mod.rs  no_extensions.rs
scim-protocol/src/protocol/request/: generate.rs  generate_deserialize.rs  generate_serialize.rs  generate_struct.rs
scim-protocol/src/protocol/response/: generate.rs  generate_deserialize.rs  generate_serialize.rs  generate_struct.rs
scim-protocol/src/resource/: mod.rs
scim-protocol/src/resource/enterprise_user/: enterprise_user.rs  manager.rs  mod.rs
scim-protocol/src/resource/group/: group.rs  member.rs  mod.rs
scim-protocol/src/resource/resource_type/: mod.rs  resource_type.rs  schema_extension.rs
scim-protocol/src/resource/schema/: mod.rs  schema.rs  schema_attribute.rs  schema_attribute_mutability.rs  schema_attribute_returned.rs  schema_attribute_type.rs  schema_attribute_uniqueness.rs
scim-protocol/src/resource/service_provider_config/: authentication_scheme.rs  bulk_config.rs  change_password_config.rs  etag_config.rs  filter_config.rs  mod.rs  patch_config.rs  service_provider_config.rs  sort_config.rs
scim-protocol/src/resource/user/: address.rs  email.rs  entitlement.rs  group_membership.rs  instant_messaging.rs  mod.rs  name.rs  phone_number.rs  photo.rs  role.rs  user.rs  x509_certificate.rs
scim-protocol/tests/: lib.rs
scim-protocol/tests/rfc7643_section8/: mod.rs  sec_8_1_minimal_user.json  sec_8_1_minimal_user.rs  sec_8_2_full_user.json  sec_8_2_full_user.rs  sec_8_3_enterprise_user.json  sec_8_3_enterprise_user.rs  sec_8_4_group.json  sec_8_4_group.rs  sec_8_5_service_provider_config.json  sec_8_5_service_provider_config.rs  sec_8_6_resource_type.json  sec_8_6_resource_type.rs  sec_8_7_1_resource_schema.rs  sec_8_7_2_service_provider_schema.json
