[package]
name = "scim-client"
edition = "2021"

version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
scim-protocol = { path = "../scim-protocol" }

reqwest = { version = "0.12.7", default-features = false, features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.43"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.39", features = ["rt", "macros"] }

[features]
default = []
test-directory-scimple = []

[lints]
workspace = true
