[package]
name = "scim-protocol"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.clippy]
pedantic = "warn"
module-name-repetitions = "allow"
module_inception = "allow"

# These should be removed when proper docs are added
missing_errors_doc = "allow"
