[package]
name = "scim-protocol"
edition = "2021"

version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints]
workspace = true
